@@ -1,3 +1,8 @@
+Sun Aug 26 22:48:54 2001  George Lebl <jirka@5z.com>
+
+	* gnome-init.c, gnome-gconf.[ch], Makefile.am:  Add gconf support
+	  here.  This is the init stuff, none of the gui stuff.
+
 Sun Aug 26 07:29:59 2001  George Lebl <jirka@5z.com>
 
 	* Makefile.am, gnome-config.[ch], parse-path.cP, gnome-sound.[ch],
